ikonlar yapıldı ve site hazır

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
             >Okulum</a
           >
         </li>
-        <li><a href="socialmedia.html">Sosyal Medya</a></li>
+        <li>
+          <a
+            href="socialmedia.html"
+            target="_blank"
+            >Sosyal Medya</a
+          >
+        </li>
         <li>
           <a
             href="contact.html"
@@ -33,7 +39,10 @@
         </li>
       </ul>
     </nav>
-    <div align="center">
+    <div
+      class="pic"
+      align="center"
+    >
       <img
         src="img/CANER.jpg"
         alt="profile picture"
@@ -47,15 +56,35 @@
     <!--myself-->
     <div class="container">
       <div class="box">
-        Lorem ipsum dolor sit amet consectetur <a href="https://www.cu.edu.tr/">Çukurova Üniversitesi</a> adipisicing
-        elit. Architecto ipsam soluta voluptatibus, maxime consectetur facere. Minima nam est asperiores quia obcaecati
-        quisquam, quam ducimus animi, aut totam ab quis unde. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-        Delectus eos necessitatibus facilis, commodi explicabo repudiandae atque perferendis saepe totam quaerat impedit
-        unde veritatis deserunt recusandae deleniti! Voluptatem aperiam minus aspernatur? Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Consequatur quas, distinctio similique, quos adipisci soluta alias sunt laudantium
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe quam necessitatibus earum cumque deleniti rem
-        cupiditate facere error culpa rerum, delectus distinctio! Vel laborum quasi voluptate error ea ab fugit.
-        voluptatibus saepe porro commodi molestias placeat illo deleniti assumenda sapiente accusantium! Hic?
+        ben Caner TANRIVERDİ. <a href="https://www.cu.edu.tr/">Çukurova Üniversitesi</a> bilgisayar mühendisliği bölümü
+        öğrencisiyim.1994 yılında adıyamanda doğdum Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam,
+        delectus similique enim iure officia magni quidem, doloremque recusandae laboriosam tempore, repellat
+        architecto? A nemo omnis molestias dolore enim veritatis ad. Lorem ipsum dolor sit amet consectetur, adipisicing
+        elit. Itaque ipsum optio deleniti officia beatae voluptas vero harum cupiditate iste repellendus numquam minima
+        vitae, exercitationem nostrum velit ab laborum animi repellat. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Hic asperiores culpa rem. Quam, vitae consequatur porro nemo amet eveniet? Temporibus
+        excepturi aliquam quos eum vero laborum blanditiis quibusdam ipsam nesciunt? Lorem ipsum dolor, sit amet
+        consectetur adipisicing elit. Optio possimus dolores blanditiis aspernatur laboriosam dolorum amet incidunt
+        voluptate non sit, exercitationem, eum quos, saepe nemo sunt dicta suscipit? Dignissimos, ipsum. Lorem ipsum
+        dolor sit amet consectetur, adipisicing elit. Repellendus, neque! Error accusantium aspernatur quisquam labore,
+        obcaecati vero in doloremque, odit hic nobis officiis natus facilis eligendi voluptatibus voluptate at ea! Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Nisi eaque beatae distinctio aliquam provident iusto! Iure,
+        totam doloremque illo voluptatibus omnis quo officia quidem fuga ipsam doloribus. Non, repudiandae cum? Lorem
+        ipsum, dolor sit amet consectetur adipisicing elit. Vitae nobis corporis animi ipsum aliquid temporibus facilis
+        autem obcaecati, debitis tenetur quas inventore veritatis ullam harum perferendis distinctio sequi accusantium
+        nemo. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum magni quod voluptates asperiores aut
+        eveniet, ipsa modi sunt aspernatur et eos est, consectetur maiores at fuga dolores accusamus animi eligendi.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi autem nihil, iusto neque molestias ducimus
+        voluptatem quas, provident magni unde adipisci dolore dolor consequatur, veritatis pariatur at architecto
+        praesentium vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. At dicta, natus illum tempore enim
+        quos incidunt facere libero vel ad odit architecto repellat laboriosam nisi. Enim perferendis odit error hic.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et incidunt provident non necessitatibus aut? Omnis
+        dolorem provident praesentium id tempora minus quod illo eveniet deserunt est veritatis sapiente, accusantium
+        at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur accusamus, consectetur quod id rerum
+        recusandae facilis aliquam incidunt atque quibusdam sed porro explicabo delectus nobis mollitia laudantium unde
+        inventore veritatis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam ut, neque quidem cum
+        voluptatem aliquam fugit quis enim repudiandae! Voluptate incidunt numquam maxime quibusdam, distinctio
+        explicabo aliquid! Maxime, doloremque nulla.
       </div>
     </div>
   </body>
