--- a/socialmedia.html
+++ b/socialmedia.html
@@ -5,38 +5,49 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="css/style.css"
+      href="css/social.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
   </head>
   <body>
-    <div>
-        <div class="contact">
-      <div>
-        <button>
-          <a
-            href="https://www.instagram.com"
-            target="_blank"
-            >instagram</a
-          >
-        </button>
+    <div class="socialMedia">
+      <div class="facebook">
+        <a
+          href="https://tr-tr.facebook.com"
+          target="_blank"
+          ><i class="fab fa-facebook"></i
+        ></a>
       </div>
-      <div>
-        <button>
-          <a
-            href="https://twitter.com "
-            target="_blank"
-            >twitter</a
-          >
-        </button>
+      <div class="twitter">
+        <a
+          href="https://twitter.com"
+          target="_blank"
+          ><i class="fab fa-twitter"></i
+        ></a>
       </div>
-      <div>
-        <button>
-          <a
-            href="https://tr-tr.facebook.com"
-            target="_blank"
-            >facebook</a
-          >
-        </button>
+      <div class="google">
+        <a
+          href="https://google.com"
+          target="_blank"
+          ><i class="fab fa-google-plus-g"></i
+        ></a>
+      </div>
+      <div class="instagram">
+        <a
+          href="https://www.instagram.com"
+          target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+      </div>
+      <div class="youtube">
+        <a
+          href="https://www.youtube.com"
+          target="_blank"
+          ><i class="fab fa-youtube"></i
+        ></a>
       </div>
     </div>
   </body>
