--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <nav>
       <ul>
         <li>
-          <a
-            href="index.html"
-            target="_blank"
-            >Ana Sayfa</a
-          >
+          <a href="index.html">Ana Sayfa</a>
         </li>
         <li>
           <a
